[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
ones = { git = "https://github.com/ldq3/ones.git", rev = "f74b2c5b8729eb04a567778cc8f4088ca5b1d449" }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
xmas-elf = "0.7.0"

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"